cmake_minimum_required(VERSION 3.26)
project(customep VERSION 1.0)
#set(ONNX_ML 1)
#set(ONNX_NAMESPACE "onnx")
set(CMAKE_CXX_STANDARD 17)
add_library(customep SHARED custom_allocator.cc custom_ep.cc custom_data_transfer.cc custom_ep_factory.cc)
set(CUSTOM_PUBLIC_HEADER custom_data_transfer.h custom_allocator.h custom_ep.h custom_ep_factory.h)
#set_target_properties(customep PROPERTIES PUBLIC_HEADER custom_ep.h)
set_target_properties(customep PROPERTIES PUBLIC_HEADER "${CUSTOM_PUBLIC_HEADER}")

target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/include/onnxruntime")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/onnxruntime")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/abseil_cpp-src")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/onnx-src")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/onnx-build")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/protobuf-src/src")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/safeint-src")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/google_nsync-src/public")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/gsl-src/include")
target_include_directories(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/_deps/mp11-src/include")

target_link_libraries(customep PUBLIC "/bert_ort/leca/code/onnxruntime2/build/Linux/Debug/libonnxruntime.so")
